<resources>
    <string name="app_name">Sporty Warsaw</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="prompt_cost">Cost</string>
    <string name="prompt_maxparticipants">Max Participants</string>
    <string name="prompt_sporttype">Sport type</string>
    <string name="prompt_addcomment">Comment</string>
    <string name="promp_district">District</string>
    <string name="prompt_street">Street</string>
    <string name="prompt_number">Number</string>
    <string name="prompt_website">Website</string>
    <string name="prompt_phoneNumber">Phone number</string>
    <string name="promp_friend">Friend</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_field_required">This field is required</string>
    <string name="search_hint">Friend name</string>
    <string name="action_searchfriends">Search friends</string>
    <string name="action_register">Register</string>
    <string name="action_add_meeting">Add meeting</string>
    <string name="action_savemeeting">Save</string>
    <string name="action_addcomment">Add comment</string>
    <string name="action_changeprofile">Change</string>
    <string name="action_closemeetingdetails">Close</string>
    <string name="action_closesportfacilitydetails">Close details</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="incorrect_credentials_message">The username or password you entered is incorrect. Please try again.</string>

    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_message">An error occurred while connecting to the server. Please make sure the phone is connected to the Internet.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_too_short_password">Password must be at least 6 characters</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="success_account_registered">Account registered successfully</string>
    <string name="error">Error</string>
    <string name="message_error_occurred">An error occurred. Please try again.</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="log_out">Log out</string>
    <string name="action_addfriend">Add friend</string>

    <string name="meetings">Meetings</string>
    <string name="sports_facilities">Sports facilities</string>
    <string name="please_wait">Please wait</string>
    <string name="authenticating">Authenticating</string>
    <string name="registering">Registering</string>
    <string name="view_profile">View profile</string>
    <string name="details">Details</string>
    <string name="friends">Friends</string>
    <string name="remove_friend">Remove friend</string>
    <string name="message_friend_removed">Removed %1$s from your friends</string>
    <string name="prompt_start_date">Start date</string>
    <string name="prompt_start_time">Start time</string>
    <string name="prompt_end_date">End date</string>
    <string name="prompt_end_time">End time</string>
    <string name="error_start_date_after_end_date">Start date must be earlier than end date</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="table_tennis">Table tennis</string>
    <string name="basketball">Basketball</string>
    <string name="volleyball">Volleyball</string>
    <string name="swimming">Swimming</string>
    <string name="handball">Handball</string>
    <string name="badminton">Badminton</string>
    <string name="squash" translatable="false">Squash</string>
    <string name="message_meeting_added">Meeting has been added</string>
    <string name="my_meetings">My meetings</string>
    <string name="other_meetings">Other meetings</string>
    <string name="sports_facility">Sports facility</string>
    <string name="address">Address</string>
    <string name="sports_facility_type">Type</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="sports_field">Sports field</string>
    <string name="error_loading_map">An error occurred while showing the map</string>
    <string name="participants">Participants</string>
    <string name="free">Free</string>
    <string name="organizer">Organizer</string>
    <string name="message_joined_meeting">You joined the meeting</string>
    <string name="message_left_meeting">You left the meeting</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="accept_friend_request">Accept friend request</string>
    <string name="reject_friend_request">Reject friend request</string>
    <string name="profile">Profile</string>
    <string name="sent_request">Sent request</string>
    <string name="comments">Comments</string>
    <string name="search_users">Search user</string>
    <string name="change_image">Change photo</string>
    <string name="friend_request_sent">Friend request sent</string>
    <string name="message_profile_picture_changed">Your profile picture has been changed</string>
    <string name="error_loading_image">Could not load the image</string>
    <string name="request_sent">Request has been sent</string>
    <string name="request_rejected">Request has been rejected</string>
    <string name="removed_friend">Removed friend</string>
    <string name="accepted_request">Accepted request</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
</resources>
